<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
  <TextView android:id="@+id/text_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/contact_information"
      android:gravity="start"
      android:layout_margin="16dp"
      android:textAppearance="?android:textAppearanceLarge"
      />
  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fillViewport="true"
      android:layout_below="@+id/text_title"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

      <LinearLayout android:id="@+id/group_names_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          >
        <ImageView android:id="@+id/names_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person"
            android:layout_margin="16dp"
            android:layout_gravity="center_vertical"
            />
        <LinearLayout android:id="@+id/names_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
          <EditText
              android:id="@+id/edit_text_first_name"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="8dp"
              android:layout_marginEnd="24dp"
              android:layout_marginStart="8dp"
              android:hint="@string/first_name"
              android:inputType="textEmailSubject"
              />
          <EditText
              android:id="@+id/edit_text_last_name"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="8dp"
              android:layout_marginEnd="24dp"
              android:layout_marginStart="8dp"
              android:hint="@string/last_name"
              android:inputType="textEmailSubject"
              />
        </LinearLayout>
      </LinearLayout>

      <LinearLayout android:id="@+id/group_date_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          >
        <ImageView android:id="@+id/calendar_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_calendar_contacts"
            android:layout_margin="16dp"
            android:layout_gravity="center_vertical"
            />
        <EditText
            android:id="@+id/text_view_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="8dp"
            android:hint="@string/date_of_birth"
            android:inputType="date"
            />
      </LinearLayout>

      <LinearLayout android:id="@+id/group_phones_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          >
        <ImageView android:id="@+id/phone_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_phone_contacts"
            android:layout_margin="16dp"
            android:layout_gravity="center_vertical"
            />
          <LinearLayout
              android:id="@+id/layout_phone"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              >
            <EditText
                android:id="@+id/edit_text_phone_number0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="8dp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                />
          </LinearLayout>
      </LinearLayout>
      <TextView
          android:id="@+id/btn_addPhone"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="4dp"
          android:layout_marginEnd="24dp"
          android:layout_marginTop="4dp"
          android:drawableEnd="@drawable/ic_add_btn"
          android:text=""
          />

      <LinearLayout android:id="@+id/group_emails_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          >
        <ImageView android:id="@+id/email_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mail_contacts"
            android:layout_margin="16dp"
            android:layout_gravity="center_vertical"
            />
        <LinearLayout
            android:id="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
          <EditText
              android:id="@+id/edit_text_email"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="8dp"
              android:layout_marginEnd="24dp"
              android:layout_marginStart="8dp"
              android:hint="@string/email"
              android:inputType="textEmailAddress"
              />
        </LinearLayout>
      </LinearLayout>
      <TextView
          android:id="@+id/btn_addEmail"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="4dp"
          android:layout_marginEnd="24dp"
          android:layout_marginTop="4dp"
          android:drawableEnd="@drawable/ic_add_btn"
          android:text=""
          />

      <LinearLayout android:id="@+id/group_addresses_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          >
        <ImageView android:id="@+id/address_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_map_pin"
            android:layout_margin="16dp"
            android:layout_gravity="center_vertical"
            />
        <LinearLayout
            android:id="@+id/layout_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
          <EditText
              android:id="@+id/edit_text_address"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="8dp"
              android:layout_marginEnd="24dp"
              android:layout_marginStart="8dp"
              android:hint="@string/address"
              android:inputType="textEmailSubject"
              />
        </LinearLayout>
      </LinearLayout>
      <TextView
          android:id="@+id/btn_addAddress"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="4dp"
          android:layout_marginEnd="24dp"
          android:layout_marginTop="4dp"
          android:drawableEnd="@drawable/ic_add_btn"
          android:text=""
          />

      <Button
          android:id="@+id/button_add_contact"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="16dp"
          android:textColor="@android:color/white"
          android:text="@string/add_contact"
          />

    </LinearLayout>
  </ScrollView>
</RelativeLayout>